# django-zero-settings

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  tox.ini
.github/workflows/: publish.yml  tests.yml
tests/: settings.py  test.py  utils.py
zero_settings/: __init__.py  settings.py
