[metadata]
name = django-zero-settings
version = 0.1.1
description = A Django util for managing app settings.
long_description = file: README.md
url = https://github.com/aasmpro/django-zero-settings
author = Abolfazl Amiri
author_email = aasmpro@gmail.com
license = GPLv3+
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = true
packages = find:
python_requires = >=2.7
install_requires =
    Django >= 2.0